Doc: Esercizio completato; ho fatto il file README.md e completato i milestone sull'overlay, devo poi sistemare alcuni errori.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -117,10 +117,10 @@ main {
   z-index: 1000;
 }
 
-/* NASCONDERE OVERLAY
+/* NASCONDERE OVERLAY */
 .hidden {
   display: none;
-}*/
+}
 
 /* Immagine centrata */
 .overlay img {
